kubernetes/argocd/apps/gateway/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-apps
  namespace: argocd-apps
  labels:
    app.kubernetes.io/instance: argocd
  annotations:
    externaldns.k8s.io: pihole
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress
  hostnames: ["argocd-apps.okd.homelab.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-apps-server
          namespace: argocd-apps
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
